[project]
name = "spider-agent-dbt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.11.0",
    "chromadb>=1.3.0",
    "diskcache>=5.6.3",
    "docker>=7.1.0",
    "duckdb>=1.4.1",
    "flaml>=2.3.6",
    "fuzzywuzzy>=0.18.0",
    "google-cloud-bigquery>=3.38.0",
    "google-generativeai>=0.8.5",
    "gymnasium>=1.2.1",
    "langchain>=1.0.3",
    "llama-cpp-python>=0.3.16",
    "minify-html>=0.18.1",
    "mysql-connector-python>=9.5.0",
    "openai>=1.31.0",
    "optimum>=2.0.0",
    "pandas>=2.3.3",
    "playwright>=1.55.0",
    "plotly>=6.3.1",
    "psycopg2>=2.9.11",
    "psycopg2-binary>=2.9.11",
    "pypdf>=6.1.3",
    "python-levenshtein>=0.27.3",
    "rich>=14.2.0",
    "rpyc>=6.0.2",
    "tenacity>=9.1.2",
    "tiktoken>=0.12.0",
    "torch>=2.9.0",
    "torchaudio>=2.9.0",
    "torchvision>=0.24.0",
    "transformers>=4.57.1",
    "unstructured>=0.18.15",
]
